# agentic-ai-q3

chatbot/: README.md  main.py  pyproject.toml
chatbot/.streamlit/: secrets.toml
conversational-ai-platform/: Dockerfile  main.py  pyproject.toml  requirements.txt
jam-agents/: main.py  pyproject.toml
jam-agents/agents/: maths_teacher.py  python_teacher.py
my-gemini-chatbot/: middleware.ts  package-lock.json  package.json
my-gemini-chatbot/src/app/: globals.css  layout.tsx  page.tsx
my-gemini-chatbot/src/app/(auth)/login/: page.tsx
my-gemini-chatbot/src/app/(auth)/signup/: page.tsx
my-gemini-chatbot/src/app/api/auth/signup/: route.ts
my-gemini-chatbot/src/app/api/chat/: route.ts
my-gemini-chatbot/src/app/api/chat/clear/: route.ts
my-gemini-chatbot/src/app/chat/: page.tsx
my-gemini-chatbot/src/components/: Footer.tsx  SessionProvider.tsx  Title.tsx
my-gemini-chatbot/src/components/animata/: Navbar.tsx
my-gemini-chatbot/src/components/animata/button/: work-button.tsx
my-gemini-chatbot/src/components/animata/card/: email-feature-card.tsx
my-gemini-chatbot/src/components/animata/text/: staggered-letter.tsx  ticker.tsx
my-gemini-chatbot/src/components/auth/: LoginForm.tsx  SignupForm.tsx
my-gemini-chatbot/src/components/chat/: ChatInterface.tsx
my-gemini-chatbot/src/lib/: auth.ts  gemini.ts  mongoose.ts
my-gemini-chatbot/src/models/: Message.ts  User.ts
my-gemini-chatbot/src/types/: chat.ts
